--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "less-loader": "^12.3.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
+    "vue-echarts": "^8.0.1",
     "vue-i18n": "^9.14.4",
     "vue-router": "^4.6.4"
   },
