--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.13.2",
     "echarts": "^6.0.0",
     "less": "^4.5.1",
     "less-loader": "^12.3.0",
