feat(chan): Phase 2 完成 - 线段/中枢/买卖点全链路打通
- 修复MIN_BI_COUNT=5 (九笔规则)
- /analysis返回完整ChanResultFull
- 合并笔中枢+线段中枢
- 过滤未确认线段
- 前端完整数据转换
- 添加?lite=true轻量模式
- 修复tooltip OHLC索引

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -74,6 +74,21 @@ exchange:
     secret-key: ${BYBIT_SECRET_KEY:}
     base-url: https://api.bybit.com
 
+market:
+  symbols:
+    - symbol: BTC/USDT
+      type: spot
+    - symbol: ETH/USDT
+      type: spot
+    - symbol: SOL/USDT
+      type: spot
+    - symbol: BNB/USDT
+      type: spot
+    - symbol: XRP/USDT
+      type: spot
+    - symbol: DOGE/USDT
+      type: spot
+
 data-integrity:
   auto-execute-backfill: false
 
